Fix search autocomplete dropdown alignment

--- a/src/components/layout/header/search/styles.module.css
+++ b/src/components/layout/header/search/styles.module.css
@@ -11,7 +11,6 @@
 .search-container input {
   background: #e9e9e9;
   border: 1px solid #b5b5b5;
-  height: 30px;
   line-height: 30px;
   padding: 0 5px;
   width: 100%;
@@ -30,7 +29,7 @@
   /*position the autocomplete items to be the same width as the container:*/
   top: 100%;
   left: 0;
-  right: 0;
+  right: -12px; /* need to add this hack to get things lined up properly...not sure why */
 }
 .autocomplete-items a {
   display: block;
